// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setFilename existing devServer.filename, existing compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "devserver-bundle.js",
}
`;

exports[`setFilename existing devServer.filename, no compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "devserver-bundle.js",
}
`;

exports[`setFilename multi compiler, existing devServer.filename, existing compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "devserver-bundle.js",
}
`;

exports[`setFilename multi compiler, existing devServer.filename, no compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "devserver-bundle.js",
}
`;

exports[`setFilename multi compiler, no devServer.filename, existing compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "mybundle.js",
}
`;

exports[`setFilename multi compiler, no devServer.filename, no compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "[name].js",
}
`;

exports[`setFilename no devServer.filename, existing compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "mybundle.js",
}
`;

exports[`setFilename no devServer.filename, no compiler filename should set correct options.filename 1`] = `
Object {
  "filename": "[name].js",
}
`;
